app-svc-deploy-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-green
  namespace: app-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-green
  template:
    metadata:
      labels:
        app: app-green
      annotations:
        deployment_slot: green
    spec:
      containers:
        - name: app-green
          imagePullPolicy: IfNotPresent
          image: example-docker-image:v2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: podinfo
              mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: labels
                fieldRef:
                  fieldPath: metadata.labels
              - path: annotations
                fieldRef:
                  fieldPath: metadata.annotations
---
apiVersion: v1
kind: Service
metadata:
  name: svc-green
  namespace: app-prod
spec:
  selector:
    app: app-green
  ports:
    - protocol: TCP
      port: 3000
  type: LoadBalancer
