app-svc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-example-deployment
  namespace: app-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-example-app
  template:
    metadata:
      labels:
        app: my-example-app
    spec:
      containers:
        - name: my-example-app
          imagePullPolicy: IfNotPresent # use local image built in minikube
          image: example-docker-image:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-example-service
  namespace: app-prod
spec:
  selector:
    app: my-example-app
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
