service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-example-service
spec:
  selector:
    app: my-example-app
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
